--- a/index.html
+++ b/index.html
@@ -82,11 +82,12 @@
                         <h3>Meus jogos</h3>
                         <p>Clique para ver exemplos de alguns jogos desenvolvidos por mim e meus alunos! </p>
                     </div><!--Especialidades-box-->
-
+                    
                     <div class="especialidades-box">
+                        <a id="esp" href="https://www.instagram.com/corvusz/" target="_blank">
                         <i class="bi bi-instagram"></i>
                         <h3>Instagram</h3>
-                        <p>Clique para me seguir no instagram e acompanhar novidades do curso! </p>
+                        <p>Clique para me seguir no instagram e acompanhar novidades do curso! </p> </a>
                     </div><!--Especialidades-box-->
     
                 </div>
