--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                              e as melhores ferramentas para iniciantes, crie o seu tão sonhado jogo!
                         </p>
                         <div class="btn-contato">
-                            <a href="#">
+                            <a href="https://www.instagram.com/corvusz/" target="_blank">
                                 <button>Entre em contato</button>
                             </a>
                         </div>
@@ -78,9 +78,10 @@
                     </div><!--Especialidades-box-->
 
                     <div class="especialidades-box">
+                        <a id="esp" href="https://gd.games/gabriellbmelo/rook-boy" target="_blank">
                         <i class="bi bi-joystick"></i>
                         <h3>Meus jogos</h3>
-                        <p>Clique para ver exemplos de alguns jogos desenvolvidos por mim e meus alunos! </p>
+                        <p>Clique para ver exemplos de alguns jogos desenvolvidos por mim e meus alunos! </p> </a>
                     </div><!--Especialidades-box-->
                     
                     <div class="especialidades-box">
