--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <title>Corvus Corp</title>
 </head>
 <body>
+    <div class="container">
     <header>
         <div class="interface">
             <div class="logo">
@@ -41,6 +42,7 @@
     </header>
 
     <main>
+        
         <section class="topo-do-site">
             <div class="interface">
                 <div class="flex">
@@ -117,6 +119,19 @@
                 </div><!--flex-->
             </div><!--interface-->
         </section><!--sobre-->
+
+        <section class = "portfolio">
+            <div class="interface">
+                <h2 class="titulo">MEU <span>PORTFÓLIO</span></h2>
+                <div class="flex">
+                    <div class="img-port"></div>
+                    <div class="img-port"></div>
+                    <div class="img-port"></div>
+                </div>
+            </div> <!--interface-->
+
+        </section> <!--portfolio-->
+    </div><!--container-->
     </main>
 </body>
 </html>
