--- a/index.html
+++ b/index.html
@@ -164,5 +164,25 @@
         </section> <!--formulario-->
     
     </main>
+
+    <footer>
+        <div class="interface">
+            <div class="line-footer">
+                <div class="flex">
+                    <div class="logo-footer">
+                        <img src="images/pngLogo_CorvusCorp.png" alt="">
+                    </div><!--logo-footer-->
+                    <div class="btn-social">
+                        <a href="https://www.instagram.com/corvusz/" target="_blank"><button><i class="bi bi-instagram"></i></button></a>
+                        <a href="https://www.youtube.com/@corvus3512" target="_blank"><button><i class="bi bi-youtube"></i></button></a>
+                        <a href="https://www.linkedin.com/in/gabriel-luiz-730463224/" target="_blank"><button><i class="bi bi-linkedin"></i></button></a>
+                    </div><!--btn-social-->    
+            </div>
+            </div><!--line-footer-->
+            <div class="line-footer borda">
+                <p><i class="bi bi-envelope-fill"></i> <a href="mailto:gabriellbmelo@gmail.com" target="_blank">gabriellbmelo@gmail.com</a></p>
+            </div><!--line-footer-->
+        </div> <!--Interface-->
+    </footer>
 </body>
 </html>
